--- a/dist.ini
+++ b/dist.ini
@@ -1,8 +1,8 @@
 name    = HTCondor-Queue-Parser
-version = 0.01
+version = 0.04
 author  = Samir Cury <samircurys@gmail.com>
 license = Perl_5 
-copyright_holder = Samir
+copyright_holder = Samir Cury
 copyright_year   = 2014
 
 [@Basic]
@@ -10,5 +10,5 @@ copyright_year   = 2014
 [Prereqs]
 XML::Simple	= 0
 JSON::XS	= 0
-File::Slurp = 0
-
+File::Slurp 	= 0
+Test::More	= 0
